JRD : Update the JRD Refresh API to make Service Code as an array